--- a/airdrop.mdx
+++ b/airdrop.mdx
@@ -1,8 +1,7 @@
 ---
 title: Airdrop
-description: "WenMint is forming a decentralized community called WEN DAO and we're inviting every NFT community we've worked with in the last two years to join."
+description: "Get ready for the biggest memecoin airdrop in Web 3 history. WenMint is forming a decentralized community called WEN DAO and we're inviting every NFT community we've worked with in the last two years to join."
 ---
-
 
 
 <CardGroup cols={1}>
