--- a/contracts.mdx
+++ b/contracts.mdx
@@ -1,34 +1,29 @@
 ---
 title: Contracts
-description: 'This is a list of all the contracts for WEN Token'
+description: 'This is a list of all the contracts for WEN Token.'
 ---
 
-
-### Token
 <CardGroup cols={1}>
   <Card
-    title="Ethereum"
-    href="https://mintlify.com/docs/settings/global"
+    title="$WEN Token (Ethereum)"
+    href="https://etherscan.io/address/0x830a8512db4F6fCA51968593E2667156C2c483A8"
   >
-    Customize your docs to your company's colors and brands.
+    The official Ethereum mainnet contract for $WEN. The token implements the ERC20Votes interface for on-chain governance.
   </Card>
 
   <Card
-    title="Polygon"
-    href="https://mintlify.com/docs/settings/global"
+    title="$fxWEN Token (Polygon)"
+    href="https://polygonscan.com/address/0x11a88f949c0592238959142653bb6847c6523d81"
   >
-    Customize your docs to your company's colors and brands.
+    The official Polygon mainnet contract for bridged $WEN. The token was bridged to Polygon via the PoS bridge.
   </Card>
-</CardGroup>
 
 
-## Vesting
 
-<CardGroup cols={1}>
   <Card
-    title="Ethereum"
-    href="https://mintlify.com/docs/settings/global"
+    title="$WEN Vesting"
+    href="https://etherscan.io/address/0x15c796d5575BFc8E8d7e285208c7ed4359507036#code"
   >
-    Customize your docs to your company's colors and brands.
+    The vesting contract used to distribute airdrops and marketing allocations with a 3-month continuos vest.
   </Card>
 </CardGroup>
