--- a/governance.mdx
+++ b/governance.mdx
@@ -1,13 +1,27 @@
 ---
 title: Governance
-description: 'This is a list of all the contracts for WEN Token'
+description: 'The vision of the organizers is to unite the Web 3 space via WEN DAO. This page is a work in progress. For now, it simply has links to the various community tools used within the WEN ecosystem.'
 ---
 
 <CardGroup cols={1}>
   <Card
-    title="Contract 1"
-    href="https://mintlify.com/docs/settings/global"
+    title="Tally.xyz"
+    href="https://tally.xyz"
   >
-    Customize your docs to your company's colors and brands.
+  </Card>
+  <Card
+    title="Discord"
+    href="https://discord.gg/wendao"
+  >
+  </Card>
+  <Card
+    title="Telegram"
+    href="https://t.me/+VIRNvdsPYVZkNmJh"
+  >
+  </Card>
+  <Card
+    title="Twitter"
+    href="https://twitter.com/wentokenorg"
+  >
   </Card>
 </CardGroup>
