--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,6 +1,6 @@
 ---
-title: Introduction
-description: 'Welcome to your new Mintlify documentation. Get started making it yours.'
+title: Welcome to the $WEN Fam
+description: 'This documentation site provides a brief overview of $WEN and its associated business entities. The site is a work in progress and will be updated frequently. Maintaining these docs will soon become the responsibility of WEN DAO.'
 ---
 
 ![WEN](/images/wen.png)
@@ -12,20 +12,20 @@ description: 'Welcome to your new Mintlify documentation. Get started making it 
     icon="coins"
     href="/tokenomics"
   >
-    Customize your docs to your company's colors and brands.
+    Overview of $WEN allocations and distribution.
   </Card>
   <Card
     title="Governance"
     icon="users"
     href="/governance"
   >
-    Automatically generate endpoints from an OpenAPI spec.
+    Overview of WEN DAO and on-chain governance.
   </Card>
   <Card
     title="Airdrop"
     icon="box"
     href="/airdrop"
   >
-    Build interactive features and designs to guide your users.
+    Overview of the $WEN MintPass and Community airdrop.
   </Card>
 </CardGroup>
