--- a/wallets.mdx
+++ b/wallets.mdx
@@ -1,55 +1,55 @@
 ---
 title: Wallets
-description: 'This is a list of all the wallet addressess for WEN DAO'
+description: 'Below you will find all project wallets associated with $WEN. The following ENS names have been acquired but may not yet be attached to the corresponding wallets. If you click on each one, you'll land on the Etherscan for each wallet.
 ---
 
 <CardGroup cols={1}>
   <Card
     title="wentokenorg.eth"
-    href="https://mintlify.com/docs/settings/global"
+    href="https://etherscan.io/address/0x1C625C367F4944fC6b41231a6a93fd189f2FdE2f"
   >
-    Customize your docs to your company's colors and brands.
+    3-of-5 multi-signature operating wallet of WEN Token LLC. 
   </Card>
   <Card
     title="wentokendao.eth"
-    href="https://mintlify.com/docs/api-playground/openapi"
+    href="https://etherscan.io/address/0x8DA84f26C94167ce781Be14F02F3A4bbe3C937e7"
   >
-    Automatically generate endpoints from an OpenAPI spec.
+    4-of-5 multi-signature transitional wallet of WEN DAO LLC, initially holding 10% of the supply reserved for the DAO. This wallet will eventually be controlled completely through on-chain governance via Tally.xyz.
   </Card>
   <Card
     title="wentokenstaking.eth"
-    href="https://mintlify.com/docs/components/accordion"
+    href="https://etherscan.io/address/0x3dfD79CAa195Fb865ef590B448CEF76A626A8611"
   >
-    Build interactive features and designs to guide your users.
+    4-of-5 multi-signature wallet of WEN Staking LLC, initially holding 10% of the supply reserved for staking. This wallet will eventually be controlled by WEN DAO via Tally.xyz.
   </Card>
   <Card
     title="wentokenairdrop.eth"
-    href="https://mintlify.com/showcase"
+    href="https://etherscan.io/address/0x3e574944890FeEd5F7260b8B4fe79188ae7865a0"
   >
-    Check out our showcase of our favorite documentation.
+    4-of-5 multi-signature wallet of WEN Token LLC, initially holding 20% of the supply reserved for the airdrop. These tokens will be deposited into the WEN Airdrop contract around the time of launch.
   </Card>
   <Card
     title="wentokenmarketing.eth"
-    href="https://mintlify.com/showcase"
+    href="https://etherscan.io/address/0x8f8d87AFB2d2E86e5b2578C84b8CAD5e427c57f0"
   >
-    Check out our showcase of our favorite documentation.
-  </Card>
-  <Card
-    title="wentokenmarketing.eth"
-    href="https://mintlify.com/showcase"
-  >
-    Check out our showcase of our favorite documentation.
+    4-of-5 multi-signature wallet of WEN Token LLC, initially holding 10% of the supply to be deployed towards marketing for $WEN and WEN DAO LLC.
   </Card>
   <Card
     title="wentokenliquidity.eth"
-    href="https://mintlify.com/showcase"
+    href="https://etherscan.io/address/0xF7A13F636b3b56FD896a8Aa0440a8Cf860A09cbE"
   >
-    Check out our showcase of our favorite documentation.
+    4-of-5 multi-signature wallet of WEN Token LLC, initially holding 40% of the supply to be deposited into a Uniswap v2 liquidity pool.
   </Card>
   <Card
     title="wentokencex.eth"
-    href="https://mintlify.com/showcase"
+    href="https://etherscan.io/address/0x1b934DA3Cb9063a6f931e9d7F6555db5e4c107fb"
   >
-    Check out our showcase of our favorite documentation.
+    4-of-5 multi-signature wallet of WEN Token LLC, initially holding 10% of the supply to be used for the purposes of getting listings on centralized and decentralized exchanges.
+  </Card>
+  <Card
+    title="wentokendeployer.eth"
+    href="https://etherscan.io/address/0x2476e5c3dc2fFe73d94C2a170C0897416d6056B2"
+  >
+    Single-signer wallet of WEN Token LLC, used as a contract deployer and operating wallet.
   </Card>
 </CardGroup>
