--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,5 +1,5 @@
 ---
-title: Welcome to the $WEN Fam
+title: Welcome
 description: 'This documentation site provides a brief overview of $WEN and its associated business entities. The site is a work in progress and will be updated frequently. Maintaining these docs will soon become the responsibility of WEN DAO.'
 ---
 
