--- a/wallets.mdx
+++ b/wallets.mdx
@@ -14,7 +14,7 @@ description: 'Below you will find all project wallets associated with $WEN. The 
     title="wentokendao.eth"
     href="https://etherscan.io/address/0x8DA84f26C94167ce781Be14F02F3A4bbe3C937e7"
   >
-    4-of-5 multi-signature transitional wallet of WEN DAO LLC, initially holding 10% of the supply reserved for the DAO. This wallet will eventually be controlled completely through on-chain governance via Tally.xyz.
+    4-of-5 multi-signature wallet of WEN DAO LLC, initially holding 10% of the supply reserved for the DAO. This wallet will eventually be controlled completely through on-chain governance via Tally.xyz.
   </Card>
   <Card
     title="wentokenstaking.eth"
