hmw-prod-change

--- a/governance.mdx
+++ b/governance.mdx
@@ -1,7 +1,9 @@
 ---
 title: Governance
-description: 'The vision of the organizers is to unite the Web 3 space via WEN DAO. This page is a work in progress. For now, it simply has links to the various community tools used within the WEN ecosystem.'
+description: ''
 ---
+
+The vision of the organizers is to unite the Web 3 space via WEN DAO. This page is a work in progress. For now, it simply has links to the various community tools used within the WEN ecosystem.
 
 <CardGroup cols={1}>
   <Card
