--- a/contracts.mdx
+++ b/contracts.mdx
@@ -1,7 +1,9 @@
 ---
 title: Contracts
-description: 'This is a list of all the contracts for WEN Token.'
+description: ''
 ---
+
+This is a list of all the contracts for WEN Token.
 
 <CardGroup cols={1}>
   <Card
