--- a/wallets.mdx
+++ b/wallets.mdx
@@ -1,7 +1,9 @@
 ---
 title: Wallets
-description: 'Below you will find all project wallets associated with $WEN. The following ENS names have been acquired but may not yet be attached to the corresponding wallets. If you click on each one, you'll land on the Etherscan for each wallet.
+description: ''
 ---
+
+Below you will find all project wallets associated with $WEN. The following ENS names have been acquired but may not yet be attached to the corresponding wallets. If you click on each one, you'll land on the Etherscan for each wallet.
 
 <CardGroup cols={1}>
   <Card
