--- a/contracts.mdx
+++ b/contracts.mdx
@@ -10,7 +10,7 @@ This is a list of all the contracts for WEN Token.
     title="$WEN Token (Ethereum)"
     href="https://etherscan.io/address/0x830a8512db4F6fCA51968593E2667156C2c483A8"
   >
-    The official Ethereum mainnet contract for $WEN. The token implements the ERC20Votes interface for on-chain governance.
+    The official Ethereum mainnet contract for $WEN. The token implements the ERC20Votes interface for on-chain governance. Audit done by 0xGuard can be found [here](https://github.com/0xGuard-com/audit-reports/blob/master/WEN/WEN.pdf).
   </Card>
 
   <Card
@@ -23,9 +23,9 @@ This is a list of all the contracts for WEN Token.
 
 
   <Card
-    title="$WEN Vesting"
-    href="https://etherscan.io/address/0x15c796d5575BFc8E8d7e285208c7ed4359507036#code"
+    title="$WEN Airdrop"
+    href="https://etherscan.io/address/wentokenairdrop.eth"
   >
-    The vesting contract used to distribute airdrops and marketing allocations with a 3-month continuos vest.
+    The vesting contract used to distribute airdrops and marketing allocations with a 3-month continuos vest. Audit done by 0xGuard can be found [here](https://github.com/0xGuard-com/audit-reports/blob/master/WEN/WEN.pdf).
   </Card>
 </CardGroup>
