--- a/governance.mdx
+++ b/governance.mdx
@@ -10,20 +10,24 @@ The vision of the organizers is to unite the Web 3 space via WEN DAO. This page 
     title="Tally.xyz"
     href="https://tally.xyz"
   >
+    On-chain governance will happen via Tally.xyz. We'll make an announcement when the DAO goes live. Voting will happen on Polygon rather than Ethereum at first to reduce the gas cost of submitting proposals and voting.
   </Card>
   <Card
     title="Discord"
     href="https://discord.gg/wendao"
   >
+    DAO communication will happen within Discord rather than Telegram. Discord makes it easier to manage serious discussions and multiple conversation flows. We'll make an announcement when the Discord goes live.
   </Card>
   <Card
     title="Telegram"
     href="https://t.me/+VIRNvdsPYVZkNmJh"
   >
+    We have a thriving Telegram community. If your main interest is trading $WEN and being a degen, Telegram is the place to be.
   </Card>
   <Card
     title="Twitter"
     href="https://twitter.com/wentokenorg"
   >
+    All official announcements are made via Twitter. Make sure to follow, turn notifications on, and keep an eye on our Twitter.
   </Card>
 </CardGroup>
