--- a/wallets.mdx
+++ b/wallets.mdx
@@ -8,50 +8,50 @@ Below you will find all project wallets associated with $WEN. The following ENS 
 <CardGroup cols={1}>
   <Card
     title="wentokenorg.eth"
-    href="https://etherscan.io/address/0x1C625C367F4944fC6b41231a6a93fd189f2FdE2f"
+    href="https://etherscan.io/address/wentokenorg.eth"
   >
     3-of-5 multi-signature operating wallet of WEN Token LLC. 
   </Card>
   <Card
     title="wentokendao.eth"
-    href="https://etherscan.io/address/0x8DA84f26C94167ce781Be14F02F3A4bbe3C937e7"
+    href="https://etherscan.io/address/wentokendao.eth"
   >
     4-of-5 multi-signature wallet of WEN DAO LLC, initially holding 10% of the supply reserved for the DAO. This wallet will eventually be controlled completely through on-chain governance via Tally.xyz.
   </Card>
   <Card
     title="wentokenstaking.eth"
-    href="https://etherscan.io/address/0x3dfD79CAa195Fb865ef590B448CEF76A626A8611"
+    href="https://etherscan.io/address/wentokenstaking.eth"
   >
     4-of-5 multi-signature wallet of WEN Staking LLC, initially holding 10% of the supply reserved for staking. This wallet will eventually be controlled by WEN DAO via Tally.xyz.
   </Card>
   <Card
     title="wentokenairdrop.eth"
-    href="https://etherscan.io/address/0x3e574944890FeEd5F7260b8B4fe79188ae7865a0"
+    href="https://etherscan.io/address/wentokenairdrop.eth"
   >
-    4-of-5 multi-signature wallet of WEN Token LLC, initially holding 20% of the supply reserved for the airdrop. These tokens will be deposited into the WEN Airdrop contract around the time of launch.
+    Airdrop contract audited by 0xGuard, initially holding 20% of the supply reserved for the airdrop plus another ~ 3.5% reserved for launch marketing. All tokens in this contract vest continously over 3 months. The contract is owned by the wentokenorg.etn multi-sig wallet above.
   </Card>
   <Card
     title="wentokenmarketing.eth"
-    href="https://etherscan.io/address/0x8f8d87AFB2d2E86e5b2578C84b8CAD5e427c57f0"
+    href="https://etherscan.io/address/wentokenmarketing.eth"
   >
-    4-of-5 multi-signature wallet of WEN Token LLC, initially holding 10% of the supply to be deployed towards marketing for $WEN and WEN DAO LLC.
+    4-of-5 multi-signature wallet of WEN Token LLC, initially holding 10% of the supply to be deployed towards launch and future marketing for $WEN and WEN DAO LLC.
   </Card>
   <Card
-    title="wentokenliquidity.eth"
-    href="https://etherscan.io/address/0xF7A13F636b3b56FD896a8Aa0440a8Cf860A09cbE"
+    title="wentokenlp.eth"
+    href="https://etherscan.io/address/wentokenlp.eth"
   >
-    4-of-5 multi-signature wallet of WEN Token LLC, initially holding 40% of the supply to be deposited into a Uniswap v2 liquidity pool.
+    This is the initial Uniswap v2 liquidity pool, locked for 6.9 years. 
   </Card>
   <Card
     title="wentokencex.eth"
-    href="https://etherscan.io/address/0x1b934DA3Cb9063a6f931e9d7F6555db5e4c107fb"
+    href="https://etherscan.io/address/wentokencex.eth"
   >
-    4-of-5 multi-signature wallet of WEN Token LLC, initially holding 10% of the supply to be used for the purposes of getting listings on centralized and decentralized exchanges.
+    4-of-5 multi-signature wallet of WEN Token LLC, initially holding 10% of the supply to be used for the purposes of getting listings on centralized and decentralized exchanges and deployiing liquidity to other chains -- particularly Polygon.
   </Card>
   <Card
     title="wentokendeployer.eth"
-    href="https://etherscan.io/address/0x2476e5c3dc2fFe73d94C2a170C0897416d6056B2"
+    href="https://etherscan.io/address/wentokendeployer.eth"
   >
-    Single-signer wallet of WEN Token LLC, used as a contract deployer and operating wallet.
+    Single-signer wallet of WEN Token LLC, used as a contract deployer.
   </Card>
 </CardGroup>
