hmw-airdrop-fix

--- a/airdrop.mdx
+++ b/airdrop.mdx
@@ -229,7 +229,7 @@ This is a list of all the NFT communities that were included in the airdrop snap
 
     The Two Boys
 
-    Twittah
+    Trendy Twittahs
 
     War Dogs Gun Club
 
