--- a/contracts.mdx
+++ b/contracts.mdx
@@ -20,8 +20,6 @@ This is a list of all the contracts for WEN Token.
     The official Polygon mainnet contract for bridged $WEN. The token was bridged to Polygon via the PoS bridge.
   </Card>
 
-
-
   <Card
     title="$WEN Airdrop"
     href="https://etherscan.io/address/wentokenairdrop.eth"
@@ -29,3 +27,7 @@ This is a list of all the contracts for WEN Token.
     The vesting contract used to distribute airdrops and marketing allocations with a 3-month continuos vest. Audit done by 0xGuard can be found [here](https://github.com/0xGuard-com/audit-reports/blob/master/WEN/WEN.pdf).
   </Card>
 </CardGroup>
+
+## Audit
+
+The $WEN ERC-20 token contract WENAirdrop vesting contract were both audited by [0xGuard](https://0xguard.com/). Full audit report is [here](https://github.com/0xGuard-com/audit-reports/blob/master/WEN/WEN.pdf).
