--- a/governance.mdx
+++ b/governance.mdx
@@ -7,10 +7,10 @@ The vision of the organizers is to unite the Web 3 space via WEN DAO. This page 
 
 <CardGroup cols={1}>
   <Card
-    title="Tally.xyz"
-    href="https://tally.xyz"
+    title="Snapshot"
+    href="https://snapshot.org/#/wenvote.eth"
   >
-    On-chain governance will happen via Tally.xyz. We'll make an announcement when the DAO goes live. Voting will happen on Polygon rather than Ethereum at first to reduce the gas cost of submitting proposals and voting.
+    Gassless governance is handled via Snapshot.org. Voting will be supported for all EVM chains on which $WEN exists (Ethereum and Polygon for now).
   </Card>
   <Card
     title="Discord"
